import React from 'react';
import Enzyme, { shallow } from 'enzyme';
import { shallowToJson } from 'enzyme-to-json';
import Adapter from 'enzyme-adapter-react-16';
import 'jest-styled-components';

import testStyle from './helpers/testStyle';
import Layout from '../Layout';

Enzyme.configure({ adapter: new Adapter() });

describe('<Layout />', () => {
  const wrapper = shallow(<Layout />);

  it('should render correctly', () => {
    expect(wrapper.find('div').exists()).toBe(true);
  });

  describe('with default props/settings', () => {
    it('should match snapshot', () => {
      expect(shallowToJson(wrapper)).toMatchSnapshot();
    });

    it('should have default style - box-sizing: border-box', () => {
      expect(wrapper.find('div')).toHaveStyleRule('box-sizing', 'border-box');
    });
  });

  describe('with added props - 1st set', () => {
    const wrapperWithProps = shallow(
      <Layout
        padding="30px"
        margin="2px"
        textAlign="center"
        minWidth="500px"
        maxWidth="1000px"
        minHeight="600px"
        maxHeight="1100px"
      />,
    );

    const expectedStyleList = [
      { style: 'padding', value: '30px' },
      { style: 'margin', value: '2px' },
      { style: 'text-align', value: 'center' },
      { style: 'min-width', value: '500px' },
      { style: 'max-width', value: '1000px' },
      { style: 'min-height', value: '600px' },
      { style: 'max-height', value: '1100px' },
    ];

    it('should match snapshot with props', () => {
      expect(shallowToJson(wrapperWithProps)).toMatchSnapshot();
    });

    expectedStyleList.forEach(({ style, value }) => {
      return testStyle(wrapperWithProps, style, value);
    });
  });
});
